@@ -1,6 +1,6 @@
 #!/usr/bin/env gosh
 ;; Communicate to kahua application server
-;; $Id: kahua.cgi.in,v 1.45 2007/04/11 09:26:48 cut-sea Exp $
+;; $Id: kahua.cgi.in,v 1.46 2007/04/13 06:04:05 bizenn Exp $
 
 ;; This cgi script is kicked by httpd and pass through the request
 ;; to one of kahua servers.
@@ -64,6 +64,7 @@
     "HTTP_HOST"
     "HTTP_KEEP_ALIVE"
     "HTTP_USER_AGENT"
+    "HTTP_X_FORWARDED_FOR"
     "PATH_INFO"
     "PATH_TRANSLATED"
     "REMOTE_ADDR"
@@ -85,8 +86,8 @@
 
 (define (metavariable-list)
   (filter-map (lambda (meta)
-                (let1 meta-var (cgi-get-metavariable meta)
-                  (and meta-var (list meta meta-var))))
+                (and-let* ((meta-var (cgi-get-metavariable meta)))
+                  (list meta meta-var)))
               *metavariables*))
 
 (define (compose-reply header body)
@@ -140,7 +141,10 @@
   (receive (worker-type cont-gsid path-info)
       (dispatch-destination param)
     (let* ((state-gsid (cgi-get-parameter "x-kahua-sgsid" param))
-           (remote-addr (cgi-get-metavariable "REMOTE_ADDR"))
+           (remote-addr (or (and-let* ((xff (cgi-get-metavariable "HTTP_X_FORWARDED_FOR"))
+				       (hops (string-split xff #/\, */)))
+			      (and (pair? hops) (car hops)))
+			    (cgi-get-metavariable "REMOTE_ADDR")))
            (header (kahua-worker-header worker-type path-info
 					:server-uri (server-uri)
 					:worker-uri (*worker-uri*)
